--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ name = "stack_overflow"
 harness = false
 
 [dependencies]
+linked_list_allocator = "0.9.0"
 bootloader = { version = "0.9", features = ["map_physical_memory"] }
 volatile = "0.2.6"
 spin = "0.5.2"
